src/features/reference/snapshots/texlab__features__reference__tests__string_reference_include_declaration.snap
---
source: src/features/reference/tests.rs
assertion_line: 333
expression: references
---
[
  {
    "uri": "[tmp]/main.bib",
    "range": {
      "start": {
        "line": 0,
        "character": 8
      },
      "end": {
        "line": 0,
        "character": 11
      }
    }
  },
  {
    "uri": "[tmp]/main.bib",
    "range": {
      "start": {
        "line": 2,
        "character": 23
      },
      "end": {
        "line": 2,
        "character": 26
      }
    }
  }
]
